--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -1,6 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:background="#0099cc" tools:context=".Mainpage">
+    android:layout_height="match_parent" android:background="@color/beautiful_blue" tools:context=".Mainpage">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
@@ -21,11 +21,66 @@
             android:background="@color/black_overlay" android:orientation="horizontal"
             tools:ignore="UselessParent">
 
-            <Button android:id="@+id/dummy_button" style="?metaButtonBarButtonStyle"
-                android:layout_width="0dp" android:layout_height="wrap_content"
-                android:layout_weight="1" android:text="@string/dummy_button" />
-
         </LinearLayout>
+
+        <ImageButton
+            android:layout_width="122dp"
+            android:layout_height="150dp"
+            android:id="@+id/learnbutton"
+            android:layout_gravity="center|bottom|left"
+            android:src="@drawable/learn"
+            android:scaleType="fitCenter"
+            android:background="@color/beautiful_blue" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="158dp"
+            android:id="@+id/practiceButton"
+            android:layout_gravity="center|bottom"
+            android:src="@drawable/practice"
+            android:scaleType="fitCenter"
+            android:background="@color/beautiful_blue" />
+
+        <ImageButton
+            android:layout_width="114dp"
+            android:layout_height="141dp"
+            android:id="@+id/beatbutton"
+            android:layout_gravity="right|bottom"
+            android:baselineAlignBottom="false"
+            android:src="@drawable/challenge"
+            android:scaleType="fitCenter"
+            android:background="@color/beautiful_blue" />
+
+        <SurfaceView
+            android:layout_width="161dp"
+            android:layout_height="175dp"
+            android:id="@+id/graphview"
+            android:layout_gravity="center"
+            android:longClickable="false"
+            android:visibility="visible" />
+
+        <ImageButton
+            android:layout_width="60dp"
+            android:layout_height="74dp"
+            android:id="@+id/exitbutton"
+            android:layout_gravity="center|right|top"
+            android:src="@drawable/exit"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="false"
+            android:cropToPadding="false"
+            android:tintMode="src_over"
+            android:background="@color/beautiful_blue"
+            android:focusableInTouchMode="false" />
+
+        <ImageButton
+            android:layout_width="63dp"
+            android:layout_height="78dp"
+            android:id="@+id/settingbutton"
+            android:layout_gravity="left|top"
+            android:src="@drawable/setting"
+            android:background="@color/beautiful_blue"
+            android:scaleType="fitCenter" />
+
     </FrameLayout>
 
 </FrameLayout>
