--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black_overlay">#66000000</color>
     <color name="beautiful_blue">#0099cc</color>
     <color name="_blue">#0099cc</color>
-
+    <color name="white">#ffffff</color>
     _
 
 
