First draft of the sound match game

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="beautiful_blue">#0099cc</color>
     <color name="_blue">#0099cc</color>
     <color name="white">#ffffff</color>
+    <color name="red">#ee0000</color>
     _
 
 
