--- a/app/src/main/res/layout/activity_soundmatch.xml
+++ b/app/src/main/res/layout/activity_soundmatch.xml
@@ -23,7 +23,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:weightSum="1"
-            android:gravity="center_horizontal"
+            android:gravity="center|center_horizontal"
             android:layout_weight="0.1">
 
             <LinearLayout
