--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="_blue">#0099cc</color>
     <color name="white">#ffffff</color>
     <color name="red">#ee0000</color>
+    <color name="black">#000000</color>
     _
 
 
