--- a/app/src/main/res/layout/activity_practice.xml
+++ b/app/src/main/res/layout/activity_practice.xml
@@ -27,6 +27,199 @@
                 android:layout_weight="1" android:text="@string/dummy_button" />
 
         </LinearLayout>
+        <LinearLayout  android:layout_width="match_parent" android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="1"
+                android:gravity="center|center_horizontal"
+                android:layout_weight="0.1">
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="0.3"
+                    android:gravity="fill_horizontal">
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.1">
+
+                        <TextView
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:text="Score"
+                            android:textColor="#0000FF"
+                            android:id="@+id/textView8"
+                            android:layout_weight="0.1"
+                            android:gravity="center_horizontal" />
+
+                        <TextView
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceLarge"
+                            android:text="000"
+                            android:id="@+id/textView"
+                            android:textColor="#0000FF"
+                            android:textSize="40dp"
+                            android:gravity="center_vertical|center_horizontal"
+                            android:layout_weight="0.9" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="0.1"
+                        android:gravity="center_horizontal">
+
+                        <TextView
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Time"
+                            android:id="@+id/textView5"
+                            android:layout_weight="0.1"
+                            android:gravity="center_horizontal"
+                            android:textColor="@color/black" />
+
+                        <Chronometer
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/chronometer"
+                            android:numeric="integer"
+                            android:typeface="normal"
+                            android:textSize="40dp"
+                            android:gravity="center_horizontal"
+                            android:layout_weight="0.9"
+                            android:textColor="@color/black" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.1"
+                        android:visibility="visible">
+
+                        <TextView
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:text="Score"
+                            android:id="@+id/textView9"
+                            android:textColor="@color/red"
+                            android:layout_weight="0.1"
+                            android:gravity="center_horizontal" />
+
+                        <TextView
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:text="000"
+                            android:id="@+id/textView2"
+                            android:textColor="@color/red"
+                            android:textSize="40dp"
+                            android:layout_weight="0.9"
+                            android:visibility="visible"
+                            android:gravity="center_vertical|center_horizontal" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.8">
+
+                <ProgressBar
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/progressBar"
+                    android:layout_weight="0.3"
+                    android:background="@drawable/apex" />
+
+                <ProgressBar
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/progressBar2"
+                    android:layout_weight="0.3"
+                    android:background="@drawable/bell" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="0.1">
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Which heart sound matches:"
+                    android:id="@+id/textView7"
+                    android:layout_weight="0.1"
+                    android:layout_gravity="left"
+                    android:gravity="left"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Aortic Stenosis"
+                    android:id="@+id/textView6"
+                    android:layout_weight="0.90"
+                    android:textSize="40dp"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:textColor="#000000" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="1"
+                android:layout_weight="0.05"
+                android:gravity="center_vertical|center_horizontal"
+                android:showDividers="middle">
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/imageButton"
+                    android:layout_weight="0.5"
+                    android:src="@drawable/practiceicon"
+                    android:scaleType="centerCrop"
+                    android:adjustViewBounds="true"
+                    android:background="@color/white" />
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/imageButton2"
+                    android:layout_weight="0.5"
+                    android:src="@drawable/practiceicon2"
+                    android:scaleType="centerCrop"
+                    android:background="@color/white"
+                    android:adjustViewBounds="true" />
+            </LinearLayout>
+
+        </LinearLayout>
     </FrameLayout>
 
 </FrameLayout>
