Irene: Fixed user interface

--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -15,72 +15,109 @@
     <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
         android:fitsSystemWindows="true">
 
-        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
-            android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:background="@color/white" android:orientation="horizontal"
-            tools:ignore="UselessParent">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="top">
 
+            <com.example.admin.heartbeat.radarGraph
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_gravity="center_horizontal|top"
+                android:longClickable="false"
+                android:visibility="visible"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp" />
+
+            <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
+                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:background="@color/white" android:orientation="horizontal"
+                tools:ignore="UselessParent"
+                android:layout_gravity="top|center_horizontal">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:background="@color/white">
+
+                    <ImageButton
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:id="@+id/learnbutton"
+                        android:src="@drawable/learnicon"
+                        android:scaleType="fitCenter"
+                        android:background="@color/white"
+                        android:onClick="onLearnButtonClick" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:text="Learn"
+                        android:id="@+id/textView3"
+                        android:textAlignment="center"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="@color/grey" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:background="@color/white">
+
+                    <ImageButton
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:id="@+id/practiceButton"
+                        android:src="@drawable/practiceicon"
+                        android:scaleType="fitCenter"
+                        android:background="@color/white"
+                        android:onClick="onPracticeButtonClick" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:text="Practice"
+                        android:id="@+id/textView"
+                        android:textAlignment="center"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="@color/grey" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent">
+
+                    <ImageButton
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:id="@+id/beatbutton"
+                        android:baselineAlignBottom="false"
+                        android:src="@drawable/challengeicon"
+                        android:scaleType="fitCenter"
+                        android:background="@color/white"
+                        android:onClick="onBeatButtonClick"
+                        android:longClickable="false" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:text="Beat"
+                        android:id="@+id/textView2"
+                        android:textAlignment="center"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="@color/grey" />
+                </LinearLayout>
+
+            </LinearLayout>
         </LinearLayout>
 
-        <ImageButton
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:id="@+id/learnbutton"
-            android:layout_gravity="center|bottom|left"
-            android:src="@drawable/learnicon"
-            android:scaleType="fitCenter"
-            android:background="@color/white" />
-
-        <ImageButton
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:id="@+id/practiceButton"
-            android:layout_gravity="center|bottom"
-            android:src="@drawable/practiceicon"
-            android:scaleType="fitCenter"
-            android:background="@color/white" />
-
-        <ImageButton
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:id="@+id/beatbutton"
-            android:layout_gravity="right|bottom"
-            android:baselineAlignBottom="false"
-            android:src="@drawable/challengeicon"
-            android:scaleType="fitCenter"
-            android:background="@color/white" />
-        
-
-        <SurfaceView
-            android:layout_width="161dp"
-            android:layout_height="175dp"
-            android:id="@+id/graphview"
-            android:layout_gravity="center"
-            android:longClickable="false"
-            android:visibility="visible" />
-
-        <ImageButton
-            android:layout_width="60dp"
-            android:layout_height="74dp"
-            android:id="@+id/exitbutton"
-            android:layout_gravity="center|right|top"
-            android:src="@drawable/exit"
-            android:scaleType="fitCenter"
-            android:adjustViewBounds="false"
-            android:cropToPadding="false"
-            android:tintMode="src_over"
-            android:background="@color/white"
-            android:focusableInTouchMode="false" />
-
-        <ImageButton
-            android:layout_width="63dp"
-            android:layout_height="78dp"
-            android:id="@+id/settingbutton"
-            android:layout_gravity="left|top"
-            android:src="@drawable/setting"
-            android:background="@color/white"
-            android:scaleType="fitCenter" />
 
     </FrameLayout>
 
