--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,11 @@
     <color name="black_overlay">#66000000</color>
     <color name="beautiful_blue">#0099cc</color>
     <color name="_blue">#0099cc</color>
+    <color name="navy_blue">#5c173dc4</color>
     <color name="white">#ffffff</color>
-    _
-
+    <color name="red">#ffed145c</color>
+    <color name="grey">#ff505050</color>
 
 </resources>
+
+
