Irene: Added learning module activities. Still need to add murmur info/sounds.

--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -43,8 +43,8 @@
                     android:background="@color/white">
 
                     <ImageButton
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
+                        android:layout_width="@dimen/icon_size"
+                        android:layout_height="@dimen/icon_size"
                         android:id="@+id/learnbutton"
                         android:src="@drawable/learnicon"
                         android:scaleType="fitCenter"
