--- a/app/src/main/res/values-v11/styles.xml
+++ b/app/src/main/res/values-v11/styles.xml
@@ -12,4 +12,10 @@
         <item name="android:background">@color/red</item>
     </style>
 
+    <style name="HeartBeatTheme" parent="Theme.AppCompat.Light">
+        <item name="colorPrimary">@color/blue</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:windowBackground">@color/white</item>
+    </style>
+
 </resources>
