--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 
     <color name="black_overlay">#66000000</color>
     <color name="beautiful_blue">#0099cc</color>
-    <color name="_blue">#0099cc</color>
+    <color name="blue">#ff0090e2</color>
     <color name="navy_blue">#5c173dc4</color>
     <color name="white">#ffffff</color>
     <color name="red">#ffed145c</color>
