--- a/app/src/main/res/layout/activity_learn_activity_cardiac_cycle.xml
+++ b/app/src/main/res/layout/activity_learn_activity_cardiac_cycle.xml
@@ -6,7 +6,33 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.admin.heartbeat.LearnActivityCardiacCycle">
 
-    <TextView android:text="Cardiac Cycle" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/scrollView3"
+        android:layout_centerHorizontal="true" >
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TextView android:text="@string/cardiac_cycle1" android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView4" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+                android:background="@drawable/cardiaccycle" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/cardiac_cycle2"
+                android:id="@+id/textView5" />
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
