--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -21,69 +21,83 @@
             android:background="@color/white" android:orientation="horizontal"
             tools:ignore="UselessParent">
 
+        </LinearLayout>
+
+
+    </FrameLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="bottom|left|right|top">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="0.8">
+
+            <ImageButton
+                android:layout_width="63dp"
+                android:layout_height="78dp"
+                android:id="@+id/settingbutton"
+                android:layout_gravity="left|top"
+                android:src="@drawable/setting"
+                android:background="@color/white"
+                android:scaleType="fitCenter" />
+
+            <ImageView
+                android:layout_width="fill_parent"
+                android:layout_height="400dp"
+                android:id="@+id/imageView"
+                android:layout_gravity="center|bottom"
+                android:src="@drawable/diagram" />
 
         </LinearLayout>
 
-        <ImageButton
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:id="@+id/learnbutton"
-            android:layout_gravity="center|bottom|left"
-            android:src="@drawable/learnicon"
-            android:scaleType="fitCenter"
-            android:background="@color/white" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:gravity="bottom"
+            android:layout_weight="0.2">
 
-        <ImageButton
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:id="@+id/practiceButton"
-            android:layout_gravity="center|bottom"
-            android:src="@drawable/practiceicon"
-            android:scaleType="fitCenter"
-            android:onClick="practicefunction"
-            android:background="@color/white" />
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:id="@+id/learnbutton"
+                android:layout_gravity="center|bottom|left"
+                android:src="@drawable/learnicon"
+                android:scaleType="fitCenter"
+                android:background="@color/white"
+                android:layout_weight="0.3" />
 
-        <ImageButton
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:id="@+id/beatbutton"
-            android:layout_gravity="right|bottom"
-            android:baselineAlignBottom="false"
-            android:src="@drawable/challengeicon"
-            android:scaleType="fitCenter"
-            android:background="@color/white" />
-        
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:id="@+id/practiceButton"
+                android:layout_gravity="center|bottom"
+                android:src="@drawable/practiceicon"
+                android:scaleType="fitCenter"
+                android:onClick="practicefunction"
+                android:background="@color/white"
+                android:layout_weight="0.3" />
 
-        <SurfaceView
-            android:layout_width="161dp"
-            android:layout_height="175dp"
-            android:id="@+id/graphview"
-            android:layout_gravity="center"
-            android:longClickable="false"
-            android:visibility="visible" />
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:id="@+id/beatbutton"
+                android:layout_gravity="right|bottom"
+                android:baselineAlignBottom="false"
+                android:src="@drawable/challengeicon"
+                android:scaleType="fitCenter"
+                android:background="@color/white"
+                android:layout_weight="0.3" />
+        </LinearLayout>
 
-        <ImageButton
-            android:layout_width="60dp"
-            android:layout_height="74dp"
-            android:id="@+id/exitbutton"
-            android:layout_gravity="center|right|top"
-            android:src="@drawable/exit"
-            android:scaleType="fitCenter"
-            android:adjustViewBounds="false"
-            android:cropToPadding="false"
-            android:tintMode="src_over"
-            android:background="@color/white"
-            android:focusableInTouchMode="false" />
-
-        <ImageButton
-            android:layout_width="63dp"
-            android:layout_height="78dp"
-            android:id="@+id/settingbutton"
-            android:layout_gravity="left|top"
-            android:src="@drawable/setting"
-            android:background="@color/white"
-            android:scaleType="fitCenter" />
-
-    </FrameLayout>
+    </LinearLayout>
 
 </FrameLayout>
