--- a/app/src/main/res/layout/activity_game1.xml
+++ b/app/src/main/res/layout/activity_game1.xml
@@ -4,6 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:screenOrientation="portrait"
+    android:configChanges="orientation|keyboardHidden">
     tools:context="com.example.admin.heartbeat.Game1">
 
     <LinearLayout  android:layout_width="match_parent" android:layout_height="match_parent"
@@ -16,14 +18,14 @@
             android:layout_height="wrap_content"
             android:weightSum="1"
             android:gravity="center|center_horizontal"
-            android:layout_weight="0.1">
+            android:layout_weight="0.05">
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_weight="0.3"
+                android:layout_weight="0.1"
                 android:gravity="fill_horizontal">
 
                 <LinearLayout
@@ -119,23 +121,35 @@
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.8">
+            android:layout_weight="0.9">
 
             <ProgressBar
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/progressBarBlue"
-                android:layout_weight="0.3"
-                android:background="@drawable/apex" />
+                android:layout_weight="0.45"
+                android:background="@drawable/apex"
+                android:progress="75"
+                android:progressTint="@color/_blue"
+                android:max="100" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="0.1" />
 
             <ProgressBar
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/progressBarRed"
-                android:layout_weight="0.3"
-                android:background="@drawable/bell" />
+                android:layout_weight="0.45"
+                android:background="@drawable/hsred1"
+                android:max="100"
+                android:progress="50"
+                android:progressTint="@color/red" />
 
         </LinearLayout>
 
@@ -192,7 +206,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/blueButton"
                 android:layout_weight="0.5"
-                android:src="@drawable/practiceicon2"
+                android:src="@drawable/practiceicon3"
                 android:scaleType="centerCrop"
                 android:background="@color/white"
                 android:adjustViewBounds="true" />
